@@ -309,6 +309,7 @@ sub ExternalIfaces
     foreach (@ifaces) {
         ($self->ifaceMethod($_) eq 'notset') and next;
         ($self->ifaceMethod($_) eq 'trunk') and next;
+        ($self->ifaceMethod($_) eq 'bundled') and next;
         if ($self->ifaceIsExternal($_)) {
             push(@array, $_);
         }
@@ -357,6 +358,7 @@ sub InternalIfaces
     foreach (@ifaces) {
         ($self->ifaceMethod($_) eq 'notset') and next;
         ($self->ifaceMethod($_) eq 'trunk') and next;
+        ($self->ifaceMethod($_) eq 'bundled') and next;
         unless ($self->ifaceIsExternal($_)) {
             push(@array, $_);
         }
@@ -462,7 +464,38 @@ sub ifaceIsExternal # (interface)
         my @aux = $self->_viface2array($iface);
         $iface = $aux[0];
     }
+    if ($self->ifaceIsBond($iface)) {
+        # Bonds are external if any of their interfaces is external
+        my $ifaces = $self->bondIfaces($iface);
+        foreach my $bundled ( @{$ifaces} ) {
+            return 1 if ($self->ifaceIsExternal($bundled));
+        }
+        return 0;
+    }
     return $self->get_hash('interfaces')->{$iface}->{external} ? 1 : 0;
+}
+
+# Method: ifaceIsBond
+#
+#   Checks if a given iface exists and is a bond
+#
+# Parameters:
+#
+#   interface - the name of a network interface
+#
+# Returns:
+#
+#   boolean - true, if the interface is external, otherwise false
+sub ifaceIsBond # (interface)
+{
+    my ($self, $iface) = @_;
+    defined($iface) or return undef;
+
+    if ( $self->ifaceExists($iface) and $iface =~ /^bond/ and not ($iface =~ /:/)) {
+        return 1;
+    } else {
+        return 0;
+    }
 }
 
 # Method: ifaceOnConfig
@@ -611,6 +644,41 @@ sub _cleanupVlanIfaces
     EBox::Sudo::root(@cmds);
 }
 
+# given a list of network interfaces appends to it any existing bonded interface
+# not already in the list and removes from it any bonded interface which has been
+# deleted from the configuration.
+sub _bundledIfaceFilter # (\array)
+{
+    my ($self, $ifaces) = @_;
+    my @array = ();
+
+    foreach my $if (@{$ifaces}) {
+        unless ($if =~ /^bond/) {
+            push(@array, $if);
+        }
+    }
+
+    my $bonds = $self->bonds();
+    foreach my $id (@{$bonds}) {
+        push(@array, "bond$id");
+    }
+    return \@array;
+}
+
+# given a list of network interfaces appends to it any existing bond interface
+# not already in the list
+sub _bundledIfaceFilterWithRemoved # (\array)
+{
+    my ($self, $ifaces) = @_;
+    my $bonds = $self->bonds();
+    foreach my $id (@{$bonds}) {
+        unless (grep(/^bond$id$/, @{$ifaces})) {
+            push(@{$ifaces}, "bond$id");
+        }
+    }
+    return $ifaces;
+}
+
 sub _ifaces
 {
     my $self = shift;
@@ -635,6 +703,7 @@ sub ifaces
     my $self = shift;
     my $ifaces = $self->_ifaces();
     $ifaces = $self->_vlanIfaceFilter($ifaces);
+    $ifaces = $self->_bundledIfaceFilter($ifaces);
     return $ifaces;
 }
 
@@ -651,6 +720,7 @@ sub ifacesWithRemoved
     my $self = shift;
     my $ifaces = $self->_ifaces();
     $ifaces = $self->_vlanIfaceFilterWithRemoved($ifaces);
+    $ifaces = $self->_bundledIfaceFilterWithRemoved($ifaces);
     return $ifaces;
 }
 
@@ -1188,12 +1258,13 @@ sub ifaceAlias # (iface)
 #
 # Returns:
 #
-#   string - dhcp|static|notset|trunk
+#   string - dhcp|static|notset|trunk|bundled
 #           dhcp -> the interface is configured via dhcp
 #           static -> the interface is configured with a static ip
 #           notset -> the interface exists but has not been
 #                 configured yet
 #           trunk -> vlan aware interface
+#           bundled -> bundled with other interfaces
 #
 sub ifaceMethod
 {
@@ -1239,6 +1310,8 @@ sub setIfaceDHCP
     } elsif ($oldm eq 'static') {
         $self->_routersReachableIfChange($name);
         $self->_checkStatic($name, $force);
+    } elsif ($oldm eq 'bundled') {
+        $self->BundledCleanUp($name);
     }
 
     my $global = EBox::Global->getInstance();
@@ -1357,6 +1430,8 @@ sub setIfaceStatic
         $self->DHCPCleanUp($name);
     } elsif ($oldm eq 'static') {
         $self->_routersReachableIfChange($name, $address, $netmask);
+    } elsif ($oldm eq 'bundled') {
+        $self->BundledCleanUp($name);
     }
 
     # Calling observers
@@ -1464,6 +1539,13 @@ sub _checkStaticIP
             next;
         }
 
+        if ($self->ifaceIsBond($iface)) {
+            my $bondIfaces = $self->bondIfaces($iface);
+            if ($if eq any(@{$bondIfaces})) {
+                next;
+            }
+        }
+
         foreach my $addr_r (@{ $self->ifaceAddresses($if)} ) {
             my $ifNetwork =  EBox::NetWrappers::ip_network($addr_r->{address},
                                                             $addr_r->{netmask});
@@ -1513,6 +1595,8 @@ sub setIfaceTrunk # (iface, force)
     } elsif ($oldm eq 'static') {
         $self->_routersReachableIfChange($name);
         $self->_checkStatic($name, $force);
+    } elsif ($oldm eq 'bundled') {
+        $self->BundledCleanUp($name);
     }
 
     if ($oldm ne 'notset') {
@@ -1572,6 +1656,114 @@ sub _removeTrunkIfaceVlanes
     foreach my $vlan (@{$vlans}) {
         defined($vlan) or next;
         $self->removeVlan($vlan->{id});
+    }
+}
+
+# Method: setIfaceBonded
+#
+#   configures an interface in bundled mode attached to a new or
+#   defined bond
+#
+# Parameters:
+#
+#   interface - the name of a network interface
+#   external - boolean to indicate if it's  a external interface
+#   bond - bond id number or -1 to create new one
+#   force - boolean to indicate if an exception should be raised when
+#   method is changed or it should be forced
+#
+sub setIfaceBonded
+{
+    my ($self, $name, $ext, $bond, $force) = @_;
+    defined $ext or $ext = 0;
+    $self->ifaceExists($name) or
+        throw EBox::Exceptions::DataNotFound(data => __('Interface'),
+                             value => $name);
+
+    # check if bond exists
+    if ( $bond >= 0 ) {
+        $self->ifaceExists("bond$bond") or
+            throw EBox::Exceptions::DataNotFound(data => __('Interface'),
+                                                 value => "bond$bond");
+    }
+
+    my $oldm = $self->ifaceMethod($name);
+    if ($oldm eq any('dhcp', 'ppp')) {
+        $self->DHCPCleanUp($name);
+    } elsif ($oldm eq 'trunk') {
+        $self->_trunkIfaceIsUsed($name);
+    } elsif ($oldm eq 'static') {
+        $self->_routersReachableIfChange($name);
+        $self->_checkStatic($name, $force);
+    } elsif ($oldm eq 'bundled' and $self->ifaceBond($name) ne $bond) {
+        $self->BundledCleanUp($name);
+    }
+
+    my $global = EBox::Global->getInstance();
+    my @observers = @{$global->modInstancesOfType('EBox::NetworkObserver')};
+
+    if ($ext != $self->ifaceIsExternal($name) ) {
+      # Tell observers the interface way has changed
+      foreach my $obs (@observers) {
+        if ($obs->ifaceExternalChanged($name, $ext)) {
+          if ($force) {
+            $obs->changeIfaceExternalProperty($name, $ext);
+          }
+          else {
+            throw EBox::Exceptions::DataInUse();
+          }
+        }
+      }
+    }
+    if ($oldm ne 'bundled') {
+        $self->_notifyChangedIface(
+            name => $name,
+            oldMethod => $oldm,
+            newMethod => 'bundled',
+            action => 'prechange',
+            force  => $force,
+        );
+    } else {
+        my $oldm = $self->ifaceIsExternal($name);
+        my $oldbr = $self->ifaceBond($name);
+
+        if (defined($oldm) and defined($ext) and ($oldm == $ext) and
+            defined($oldbr) and defined($bond) and ($oldbr eq $bond)) {
+            return;
+        }
+    }
+
+    if ($oldm eq 'trunk') {
+        $self->_removeTrunkIfaceVlanes($name);
+    }
+    # new bond
+    if ($bond < 0) {
+        my @bonds = @{$self->bonds()};
+        my $last = int(pop(@bonds));
+        $bond = $last;
+        $self->_createBond($bond);
+    }
+
+    my $ifaces = $self->get_hash('interfaces');
+    $ifaces->{$name}->{external} = $ext;
+    delete $ifaces->{$name}->{address};
+    delete $ifaces->{$name}->{netmask};
+    $ifaces->{$name}->{method} = 'bundled';
+    $ifaces->{$name}->{changed} = 1;
+    $ifaces->{$name}->{bond_id} = $bond;
+    $ifaces->{$name}->{name} = $name;
+    $self->set('interfaces', $ifaces);
+
+    # mark bond as changed
+    $self->_setChanged("bond$bond");
+
+    if ($oldm ne 'bundled') {
+        $self->_notifyChangedIface(
+            name => $name,
+            oldMethod => $oldm,
+            newMethod => 'bundled',
+            action => 'postchange'
+        );
     }
 }
 
@@ -1711,6 +1903,116 @@ sub vlan
     return $vlans->{$vlan};
 }
 
+# Method: _createBond
+#
+#   creates a new bond interface.
+#
+# Parameters:
+#
+#   id - bond identifier
+#
+sub _createBond
+{
+    my ($self, $id) = @_;
+
+    my $bond = "bond$id";
+    my $interfaces = $self->get_hash('interfaces');
+    if (exists $interfaces->{$bond}) {
+        throw EBox::Exceptions::DataExists('data' => 'bond',
+                                           'value' => $id);
+    }
+
+    $self->setIfaceAlias($bond, $bond);
+}
+
+# Method: _removeBond
+#
+#   Removes a bond
+#
+# Parameters:
+#
+#   id - bond identifier
+#
+sub _removeBond # (id)
+{
+    my ($self, $id, $force) = @_;
+    $self->_removeIface("bond$id");
+}
+
+# Method: _removeEmptyBonds
+#
+# Removes bonds which has no bundled interfaces
+sub _removeEmptyBonds
+{
+    my ($self) = @_;
+    my %seen;
+
+    for my $if ( @{$self->ifaces()} ) {
+        if ( $self->ifaceMethod($if) eq 'bundled' ) {
+            $seen{$self->ifaceBond($if)}++;
+        }
+    }
+
+    # remove unseen bonds
+    for my $bond ( @{$self->bonds()} ) {
+        next if ( $seen{$bond} );
+        $self->_removeBond($bond);
+    }
+}
+
+# Method: bonds
+#
+#   Returns a reference to a sorted array with existing bonds ID's
+#
+# Returns:
+#
+#   an array ref - holding the bonds ID's
+sub bonds
+{
+    my $self = shift;
+    my @bonds;
+
+    for my $iface (keys %{$self->get_hash('interfaces')}) {
+        if ($iface =~ /^bond/) {
+            $iface =~ s/^bond//;
+            push(@bonds, $iface);
+        }
+    }
+    @bonds = sort @bonds;
+    return \@bonds;
+}
+
+# Method: bondIfaces
+#
+#   Returns a reference to an array of ifaces bundled to
+#   the given bond ifname
+#
+# Parameters:
+#
+#   bond - Bond ifname
+#
+# Returns:
+#
+#   an array ref - holding the iface names
+sub bondIfaces
+{
+    my ($self, $bond) = @_;
+
+    # get the bond's id
+    $bond =~ s/^bond//;
+
+    my @ifaces = ();
+    for my $iface (@{$self->ifaces}) {
+        if ($self->ifaceMethod($iface) eq 'bundled') {
+            if ($self->ifaceBond($iface) eq $bond) {
+               push(@ifaces, $iface);
+            }
+        }
+    }
+
+    return \@ifaces;
+}
+
 # Method: unsetIface
 #
 #   Unset an interface
@@ -1739,6 +2041,8 @@ sub unsetIface # (interface, force)
     } elsif ($oldm eq 'static') {
         $self->_routersReachableIfChange($name);
         $self->_checkStatic($name, $force);
+    } elsif ($oldm eq 'bundled') {
+        $self->BundledCleanUp($name);
     }
 
     if ($oldm ne 'notset') {
@@ -1789,6 +2093,7 @@ sub unsetIface # (interface, force)
 #   - For dhcp interfaces:
 #       - the current address if the interface is up
 #       - undef if the interface is down
+#   - For bundled interfaces: its bond ifaces address (static or dhcp)
 #   - For not-yet-configured interfaces
 #       - undef
 sub ifaceAddress # (name)
@@ -1806,6 +2111,59 @@ sub ifaceAddress # (name)
         return $self->get_hash('interfaces')->{$name}->{address};
     } elsif ($self->ifaceMethod($name) eq 'dhcp') {
         return $self->DHCPAddress($name);
+    }
+    return undef;
+}
+
+# Method: ifaceBond
+#
+#   Returns the bond id for an interface
+#
+# Parameters:
+#
+#   name - interface name
+#
+#  Returns:
+#
+#   - For bundled interfaces: the bond id
+#   - For the rest: undef
+#
+sub ifaceBond # (name)
+{
+    my ($self, $name) = @_;
+    $self->ifaceExists($name) or
+        throw EBox::Exceptions::DataNotFound(data => __('Interface'),
+                             value => $name);
+
+    if ($self->ifaceMethod($name) eq 'bundled') {
+        return $self->get_hash('interfaces')->{$name}->{bond_id};
+    } else {
+        return undef;
+    }
+}
+
+# Method: bondMode
+#
+#   Returns the bonding mode for a bond interface
+#
+# Parameters:
+#
+#   name - interface name
+#
+#  Returns:
+#
+#   - For bond: the bonding mode
+#   - For the rest: undef
+#
+sub bondMode # (name)
+{
+    my ($self, $name) = @_;
+    $self->ifaceExists($name) or
+        throw EBox::Exceptions::DataNotFound(data => __('Interface'),
+                             value => $name);
+
+    if ($self->ifaceIsBond($name)) {
+        return $self->get_hash('interfaces')->{$name}->{bond_mode};
     }
     return undef;
 }
@@ -2600,6 +2958,10 @@ sub _preSetConf
                     my $ifname = $if;
                     push (@cmds, "/sbin/ip address flush label $if");
                     push (@cmds, "/sbin/ip address flush label $if:*");
+                    if ($self->ifaceMethod($if) eq 'bundled') {
+                        my $bond = $self->ifaceBond($if);
+                        push (@cmds, "/sbin/ifenslave --force -d bond$bond $if");
+                    }
                     push (@cmds, "/sbin/ifdown --force -i $file $ifname");
                 }
 
@@ -2667,6 +3029,13 @@ sub _enforceServiceState
             $dynIfaces = 1;
         }
         if ($self->_hasChanged($iface) or $dhcpIface or $restart) {
+            if ($self->ifaceIsBond($iface)) {
+                # ifup bond slaves first
+                my $bondIfaces = $self->bondIfaces($iface);
+                foreach my $slaveIface (@{$bondIfaces}) {
+                     push(@ifups, $slaveIface);
+                }
+            }
             push(@ifups, $iface);
         }
     }
@@ -2959,6 +3328,35 @@ sub DHCPCleanUp # (interface)
     my $state = $self->get_state();
     delete $state->{dhcp}->{$iface};
     $self->set_state($state);
+}
+
+# Method: BundledCleanUp
+#
+#   Removes the bond configuration for a given bundled interface
+#
+# Parameters:
+#
+#   interface - interface name
+#
+sub BundledCleanUp # (interface)
+{
+    my ($self, $iface) = @_;
+    $self->ifaceExists($iface) or
+        throw EBox::Exceptions::DataNotFound(data => __('Interface'),
+                             value => $iface);
+
+    my $bond = $self->ifaceBond($iface);
+
+    # this changes the bond
+    if ($self->ifaceIsBond("bond$bond")) {
+        $self->_setChanged("bond$bond");
+    }
+
+    my $ifaces = $self->get_hash('interfaces');
+    delete $ifaces->{$iface}->{bond_id};
+    $self->set('interfaces', $ifaces);
+
+    $self->_removeEmptyBonds();
 }
 
 # Method: selectedDefaultGateway
