@@ -54,6 +54,7 @@ sub masonParameters
     }
 
     my @params = ();
+    my @bonds = ();
     my @ifaces = ();
     my $vlans = [];
 
@@ -77,6 +78,8 @@ sub masonParameters
             $iface->{'virtual'} = $net->vifacesConf($_);
         } elsif ($net->ifaceMethod($_) eq 'trunk') {
             $vlans = $net->ifaceVlans($_);
+        } elsif ($net->ifaceMethod($_) eq 'bundled') {
+            $iface->{'bond'} = $net->ifaceBond($_);
         }
     }
 
@@ -85,11 +88,19 @@ sub masonParameters
         $externalWarning = $net->externalConnectionWarning($ifname, $self->request());
     }
 
+    foreach my $bond (@{$net->bonds()}) {
+        my $bondinfo = {};
+        $bondinfo->{'id'} = $bond;
+        $bondinfo->{'name'} = "bond$bond";
+        $bondinfo->{'alias'} = $net->ifaceAlias("bond$bond");
+        push (@bonds, $bondinfo);
+    }
     @params = (
         'network'         => $net,
         'externalWarning' => $externalWarning,
         'iface'           => $iface,
         'ifaces'          => \@ifaces,
+        'bonds'           => \@bonds,
         'vlans'           => $vlans
     );
 
