@@ -8,7 +8,13 @@ use EBox::Config;
 my @autoIfaces = ('lo');
 push @autoIfaces, grep {
         my $ifMethod = $networkMod->ifaceMethod($_);
-        (($ifMethod eq 'static') or ($ifMethod eq 'dhcp'))
+            ($ifMethod eq 'bundled')
+   } @iflist;
+push @autoIfaces, grep {
+        my $ifMethod = $networkMod->ifaceMethod($_);
+        ($ifMethod eq 'static') or
+            ($ifMethod eq 'dhcp') or
+            (($ifMethod eq 'trunk') and ($networkMod->ifaceIsBond($_)))
    } @iflist;
 </%init>
 auto <% "@autoIfaces" %>
@@ -28,9 +34,21 @@ $iface
 </%args>
 <%init>
 my $method = $networkMod->ifaceMethod($iface);
+my $bondSlave = 0;
+if ($method eq 'bundled') {
+    $bondSlave = 1;
+    $method = 'manual';
+}
+my $bondTrunk = 0;
+if ($method eq 'trunk' and ($iface =~ /^bond/)) {
+    $bondTrunk = 1;
+    $method = 'manual';
+}
 # check if we should ignore the interface
 if (($method ne 'static') and
-    ($method ne 'dhcp')) {
+    ($method ne 'dhcp') and
+     (not $bondSlave) and
+     (not $bondTrunk)) {
             return;
 }
 
@@ -46,6 +64,18 @@ vlan-raw-device <% $vlan->{interface} %>
       address <% $networkMod->ifaceAddress($iface) %>
       netmask <% $networkMod->ifaceNetmask($iface) %>
       broadcast <% $networkMod->ifaceBroadcast($iface) %>
+% }
+% if ($networkMod->ifaceMethod($iface) eq 'bundled') {
+      bond-master bond<% $networkMod->ifaceBond($iface) %>
+% }
+% if ($networkMod->ifaceIsBond($iface)) {
+%     my @bondPorts = @{ $networkMod->bondIfaces($iface)};
+%     my $bondMode = $networkMod->bondMode($iface);
+      bond-slaves <% "@bondPorts" %>
+      bond-mode <% "$bondMode" %>
+      bond-miimon 100
+      bond-updelay 200
+      bond-downdelay 200
 % }
 % if ($mtu) {
       mtu <% $mtu %>
