@@ -1,3 +1,5 @@
+HEAD
+	+ Restore bonding support from Zentyal 4.0
 5.0.4
 	+ Migrate services and objects redis data when upgrading from 4.X
 5.0.3
